2014-11-11  Arjen de Rijke  <arjenderijke@gmail.com>

	* configure.ac: Add autotools support
