@@ -5,3 +5,4 @@ autom4te.cache
 configure
 config.log
 config.status
+*Makefile
