@@ -1,2 +1,3 @@
 AC_INIT([CEmbeddedHttpd], [0.0.1])
+AC_CONFIG_FILES([Makefile src/Makefile])
 AC_OUTPUT
